# ffstabilize

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ffstabilize.cpp  ffstabilize_tester.cpp  wix_patch.xml
ffmpeg-master-latest-linux64-gpl-shared/: ffstabilize  source.txt
ffmpeg-master-latest-linux64-gpl-shared/include/libavutil/: ffversion.h
ffmpeg-master-latest-linux64-gpl-shared/lib/: libavutil.so.60  libpostproc.so.59  libpostproc.so.59.0.100  libswresample.so.6.0.100  libswscale.so.9.0.100
ffmpeg-master-latest-win64-gpl-shared/include/libavutil/: ffversion.h
